[package]
name = "discogs"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
thiserror = "1.0.20"
url = "2.1.1"
strum = "0.19.2"
strum_macros = "0.19.2"
