[package]
name = "discogs"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = [ "json" ] }
serde = { version = "1.0.116", features = [ "derive" ] }
thiserror = "1.0.20"
url = { version = "2.1.1", features = [ "serde" ] }
chrono = { version = "0.4.18", features = [ "serde" ] }
