[package]
name = "musicbrainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
time = { version = "0.3.11", features = ["serde-well-known"] }
tokio = "1.19.2"
tower = "0.4.12"
tracing = "0.1.35"

[build-dependencies]
anyhow = "1.0.57"
case = "1.0.0"
convert_case = "0.5.0"
prettyplease = "0.1.12"
proc-macro2 = "1.0.39"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
syn = "1.0.96"

[dev-dependencies]
anyhow = "1.0.57"
reqwest = "0.11.11"
serde_path_to_error = "0.1.7"
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber = "0.3.14"
