[package]
name = "musicbrainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
time = { version = "0.3.11", features = ["serde-well-known"] }
tokio = "1.19.2"
tower = { version = "0.4.12", features = ["buffer", "limit", "retry", "timeout", "util"] }
tracing = "0.1.35"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.57"
case = "1.0.0"
prettyplease = "0.1.12"
proc-macro2 = "1.0.39"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
syn = "1.0.96"

[dev-dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.6.0"
reqwest = "0.11.11"
serde_path_to_error = "0.1.7"
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber = "0.3.14"
